--- a/slider/slider.css
+++ b/slider/slider.css
@@ -1,4 +1,4 @@
-
+/* 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 
@@ -15,14 +15,14 @@ a{
     text-decoration: none;
    
 }
-/* Header section */
+
 header{
     width: 1140px;
     max-width: 80%;
     margin: auto;
     height: 50px;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     position: relative;
     z-index: 100;
@@ -44,7 +44,7 @@ header nav a.active, header nav a:hover{
 
 }
 
-/* slider section */
+
 .slider{
     width: 100vw;
     height: 100vh;
@@ -74,7 +74,7 @@ header nav a.active, header nav a:hover{
     padding-right: 30%;
     box-sizing: border-box;
     color: black;
-    /* text-shadow: 0 5px 10px #0004; */
+    text-shadow: 0 5px 10px #0004;
 }
 .slider .list .item .content .title,
 .slider .list .item .content .type{
@@ -106,7 +106,7 @@ header nav a.active, header nav a:hover{
     background-color: violet;
     color: whitesmoke;
 }
-/* thumbnail section */
+
 .thumbnail{
     display: flex;
     gap: 2px;
@@ -132,7 +132,7 @@ header nav a.active, header nav a:hover{
     border-radius: 20px;
     box-shadow: 5px 0 15px rgba(0,0,0,0.3);
 }
-/* nextPrevArrows */
+
 .nextPrevArrows{
     position: absolute;
     top: 80%;
@@ -160,7 +160,7 @@ header nav a.active, header nav a:hover{
     background-color: white;
     color: black;
 }
-/* animation part */
+
 .slider .list .item:nth-child(1){
     z-index:1
 }
@@ -193,7 +193,7 @@ header nav a.active, header nav a:hover{
     animation-delay: 1s;
 }
       
-/* animation for next button */
+
 .slider .next .list .item:nth-child(1) img{
     width: 130px;
     height: 200px;
@@ -233,7 +233,7 @@ header nav a.active, header nav a:hover{
         transform: translateX(150px);
     }
 }
-/* animation for prev button */
+
 .slider.prev .list .item:nth-child(2){
     z-index: 2;
 }
@@ -280,4 +280,318 @@ header nav a.active, header nav a:hover{
     }
 }
     
+ */
 
+
+
+
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Header section */
+
+header{
+    width: 100%; 
+    max-width: 100%;
+    padding-left: 100px;
+    padding-top: 12px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    z-index: 1000;
+    background-color: palevioletred;
+    
+   
+}
+
+header nav a{
+   
+    color: black;
+    font-weight: 700;
+    margin-right: 5px;
+    padding: 5px 10px;
+    font-size: 15px;
+    transition: 0.2s;
+    text-decoration: none;
+}
+
+/* a.active{
+    background: #14ff72cb;
+    border-radius: 2px;
+} */
+
+a:hover{
+    color: white;
+    border-radius: 2px;
+}
+
+/* Header section */
+
+
+
+/* carousel */
+
+.carousel{
+    width: 100vw;
+    height: 110vh;
+    margin-top: -0px;
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel .list .item{
+    width: 170px;
+    height: 230px;
+    position: absolute;
+    top: 80%;
+    transform: translateY(-70%);
+    left:50%;
+    border-radius: 20px;
+    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
+    background-position: 50% 50%;
+    background-size: cover;
+    z-index: 100;
+    transition: 1s;
+}
+
+.carousel .list .item:nth-child(1),
+.carousel .list .item:nth-child(2){
+    top: 1;
+    left: 1;
+    right: 1;
+    transform: translate(0, 0);
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel .list .item:nth-child(3){
+    left: 65%;
+}
+
+.carousel .list .item:nth-child(4){
+    left: calc(64% + 200px);
+}
+
+.carousel .list .item:nth-child(5){
+    left: calc(64% + 400px);
+}
+
+.carousel .list .item:nth-child(6){
+    left: calc(67% + 600px);
+}
+
+.carousel .list .item:nth-child(n+7){
+    left: calc(67% + 800px);
+    opacity: 0;
+}
+
+
+
+
+
+.list .item .content{
+    position: absolute;
+    top: 44%;
+    left: 100px;
+    transform: translateY(-50%);
+    width: 500px;
+    text-align: left;
+    color: #fff;
+    display: none;
+}
+
+.list .item:nth-child(2) .content{
+    display: block;
+}
+
+.content .title{
+    font-size: 70px;
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    line-height: 1;
+    opacity: 2;
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
+}
+
+.content .name{
+    font-size: 50px;
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    line-height: 1;
+    text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.8);
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+}
+
+/* .content .des{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    margin-left: 5px;
+
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.9s 1 forwards;
+} */
+
+.content .btn{
+    /* margin-left: 5px; */
+    opacity: 0;
+    animation: animate 1s ease-in-out 1.2s 1 forwards;
+}
+
+.content .btn button{
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border: 2px solid black;
+    border-radius: 20px;
+}
+.content .btn button:hover{
+    background-color: palevioletred;
+    color: black;
+    font-weight: bold;
+}
+
+
+/* .content .btn button:nth-child(1){
+    margin-right: 15px;
+}
+
+.content .btn button:nth-child(2){
+    background: transparent;
+    transition: 0.3s;
+}
+
+.content .btn button:nth-child(2):hover{
+   
+} */
+
+
+@keyframes animate {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
+}
+
+/* Carousel */
+
+
+
+
+
+
+/* next prev arrows */
+
+.arrows{
+    position: absolute;
+    top: 80%;
+    right: 52%;
+    z-index: 100;
+    width: 300px;
+    max-width: 30%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.arrows button{
+    width: 50px;
+    height: 50px;
+    border-radius: 30%;
+    background-color: black;
+    color: #fff;
+    border: none;
+    outline: none;
+    font-size: 25px;
+    font-family: monospace;
+    font-weight: bold;
+    transition: .5s;
+    cursor: pointer;
+}
+
+.arrows button:hover{
+    background: palevioletred;
+    color: #000;
+}
+
+
+/* time running */
+.carousel .timeRunning{
+    position: absolute;
+    z-index: 1000;
+    width: 0%;
+    height: 4px;
+    background-color: black;
+    left: 0;
+    top: 0;
+    animation: runningTime 7s linear 1 forwards;
+}
+
+@keyframes runningTime {
+    
+    from{width: 0%;}
+    to{width: 100%;}
+
+}
+
+
+/* Responsive Design */
+
+@media screen and (max-width: 999px){
+    
+    header{
+        padding-left: 50px;
+    }
+
+    .list .item .content{
+        left: 50px;
+    }
+
+    .content .title, .content .name{
+        font-size: 70px;
+    }
+
+    .content .des{
+        font-size: 16px;
+    }
+
+}
+
+@media screen and (max-width: 690px){
+    header nav a{
+        font-size: 14px;
+        margin-right: 0;
+    }
+
+    .list .item .content{
+        top: 40%;
+    }
+
+    .content .title, .content .name{
+        font-size: 45px;
+    }
+
+    .content .btn button{
+        padding: 10px 15px;
+        font-size: 14px;
+    }
+}
