--- a/slider2/demo.css
+++ b/slider2/demo.css
@@ -5,19 +5,50 @@
 }
 
 body{
-    background: #eaeaea;
-    overflow: hidden;
+    background: wheat;
+    /* overflow: hidden; */
 }
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  ul.topnav li {float: left;}
+  
+  ul.topnav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  ul.topnav li a:hover:not(.active) {background-color: #111;}
+  
+  ul.topnav li a.active {background-color: #04AA6D;}
+  
+  ul.topnav li.right {float: left;}
+  
+  @media screen and (max-width: 600px) {
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
+  }
+
+
 
 .container{
     position: absolute;
-    top: 40%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 1000px;
-    height: 302px;
-    background: #f5f5f5;
-    box-shadow: 0 30px 50px #dbdbdb;
+    width: 100%;
+    height: 400px;
+    /* background: #f5f5f5; */
+    background-size: cover;
+    /* box-shadow: 0 30px 50px #dbdbdb; */
 }
 
 .container .slide .item{
@@ -27,13 +58,15 @@ body{
     top: 118%;
     transform: translate(0, -50%);
     border-radius: 60px;
-    box-shadow: 0 30px 50px #505050;
+    /* box-shadow: 0 30px 50px #505050; */
     background-position: 50% ;
     background-size: cover;
     display: inline-block;
     transition: 0.5s;
-}
+    opacity: 2.5;
 
+    
+}
 .slide .item:nth-child(1),
 .slide .item:nth-child(2){
     top: 1;
@@ -43,8 +76,6 @@ body{
     width: 100%;
     height: 100%;
 }
-
-
 .slide .item:nth-child(3){
     left: 73%;
 }
@@ -61,8 +92,6 @@ body{
     left: calc(50% + 66px);
     opacity: 0;
 }
-
-
 
 .item .content{
     position: absolute;
@@ -97,13 +126,16 @@ body{
     animation: animate 1s ease-in-out 0.3s 1 forwards;
 }
 
-.content button{
+/* .content button{
     padding: 10px 20px;
-    border: none;
+    border: 2px solid brown;
     cursor: pointer;
     opacity: 0;
-    animation: animate 1s ease-in-out 0.6s 1 forwards;
+    animation: animate 3s ease-in-out 0.6s 1 forwards;
 }
+.content button:hover{
+    background-color: bisque;
+} */
 
 
 @keyframes animate {
@@ -144,3 +176,116 @@ body{
     background: #ababab;
     color: #fff;
 }
+.flower{
+    position: relative;
+    width: 50%;
+
+}
+.im{
+    border: 2px solid black;
+    border-radius: 20px;
+    display: block;
+    /* width: 100%;
+    height: auto; */
+    width: 290px;
+    height: 250px;
+    margin-top: 557px;
+    /* margin-left: 298px; */
+}
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* background-color: #c219a0; */
+    overflow: hidden;
+    width: 290px;
+    /* width: 100%; */
+    height: 0;
+    transition: 1s ease;
+  }
+  
+  .flower:hover .overlay {
+    height: 100%;
+    
+  }
+  
+  .text {
+    /* margin-top: 5px; */
+    border: 2px solid black;
+    border-radius: 20px;
+    white-space: nowrap; 
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    overflow: hidden;
+    
+    left: 50%;top: 50%;
+    width: 290px;
+    height: 250px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
+  .flower2{
+    position: relative;
+    width: 50%;
+
+}
+.im2{
+    border: 2px solid black;
+    border-radius: 20px;
+    display: block;
+    /* width: 100%;
+    height: auto; */
+    width: 290px;
+    height: 250px;
+    margin-top: -10px;
+    margin-left: 350px;
+    /* margin-left: 298px; */
+}
+.overlay2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* background-color: #c219a0; */
+    overflow: hidden;
+    width: 290px;
+    /* width: 100%; */
+    height: 0;
+    margin-left: 350px;
+    transition: 1s ease;
+  }
+  
+  .flower2:hover .overlay2 {
+    height: 100%;
+    
+  }
+  
+  .text2 {
+    /* margin-top: 5px; */
+    border: 2px solid black;
+    border-radius: 20px;
+    white-space: nowrap; 
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    overflow: hidden;
+    left: 50%;
+    top: 50%;
+    width: 290px;
+    height: 250px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+  
+
+/* .flower2 img{
+    margin-left: 300px;
+    width: 290px;
+    height: 250px;
+    /* border: 2px solid black; */
+    /* border-radius: 50px; */
+    
+
