--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -307,14 +307,42 @@ body.dark .search-field i {
 
 .divv{
     width: auto;
+    height: 150vh;
     margin: 30px;
     padding: 15px;
+    /* border-radius: 20px; */
     background-color: whitesmoke;
-    border-radius: 20px;
 }
 .imgg{
     height: auto;
     max-width: 100%;
     border-radius: 40px;
     margin: 50px;
+}
+ .textt{
+    margin-top: -350px;
+    margin-left: 60px;
+    text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.8);
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
+   
+}
+.para{
+    margin-left:60px ;
+    text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.8);
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+}
+.buttonn{
+     margin-left: 80px;
+     margin-top: -90px;
+     background-color: black;
+     color: white;
+     font-weight: 800;
+     padding: 10px;
+     border-radius: 20px;
+     cursor: pointer;
+}
+.buttonn:hover{
+    background-color: aliceblue;
+    color: black;
+
 }
