--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -366,7 +366,7 @@ body.dark .search-field i {
     margin-top:140px;
 }
 .margin{
-    margin-top: -120px;
+    margin-top: -120px; 
 }
 
 .img1{
@@ -378,6 +378,46 @@ body.dark .search-field i {
     margin-left: -1px;
     margin-top: 140px;
 }
+.p1{
+    color: purple;
+    font-weight: 800;
+    margin-left: 19px;
+    margin-top: -78px;
+}
+.p1:hover{
+    color: black;
+    
+}
+.btn1{
+    margin-left: 80px;
+     margin-top: 10px;
+     background-color: aliceblue;
+     color: black;
+     font-weight: 800;
+     padding: 10px;
+     border-radius: 20px;
+     cursor: pointer;
+
+}
+.btn1:hover{
+    background-color: black;
+    color: white;
+}
+/* .btn2{
+    margin-left: 80px;
+     margin-top: 10px;
+     background-color: aliceblue;
+     color: black;
+     font-weight: 800;
+     padding: 10px;
+     border-radius: 20px;
+     cursor: pointer;
+
+}
+.btn2:hover{
+    background-color: black;
+    color: white;
+} */
 
 .imgg2{
     margin-top: -65px;
@@ -393,15 +433,15 @@ body.dark .search-field i {
     margin-top: -690px;
 }
 
-.imgg3{
+ .imgg3{
     margin-top: -135px;
-    margin-left: -19px;
-}
+    margin-left: 655px;
+} 
 .img3{
     width: 300px; 
     height: 330px;
     border: 2px solid black;
     border-radius: 20px;
-    margin-left: 670px;
+    margin-left: -00px;
     margin-top: -200px;
 }
