--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -70,12 +70,13 @@ nav .nav-bar .logo a {
     font-weight: 800;
     color: black;
     text-decoration: none;
-   
+
 
 }
-nav .nav-bar .logo a:hover{
+
+nav .nav-bar .logo a:hover {
     color: blue;
-    
+
 
 }
 
@@ -305,108 +306,119 @@ body.dark .search-field i {
     }
 }
 
- .divv{
+.divv {
     width: auto;
     height: 400vh;
     margin: 30px;
     padding: 15px;
-     /* border-radius: 20px;  */
-     background-color: whitesmoke; 
-} 
-.imgg{
+    /* border-radius: 20px;  */
+    background-color: whitesmoke;
+}
+
+.imgg {
     height: auto;
     width: 880px;
     /* max-width: 100%; */
     border-radius: 40px;
     margin: 50px;
 }
- .textt{
+
+.textt {
     margin-top: -350px;
     margin-left: 60px;
     text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.8);
     animation: animate 1s ease-in-out 0.3s 1 forwards;
-   
+
 }
- .para{
-    margin-left:60px ;
+
+.para {
+    margin-left: 60px;
     text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.8);
     animation: animate 1s ease-in-out 0.6s 1 forwards;
 }
+
 @keyframes animate {
-    
-    from{
+
+    from {
         opacity: 0;
         transform: translate(0, 100px);
         filter: blur(33px);
     }
 
-    to{
+    to {
         opacity: 1;
         transform: translate(0);
         filter: blur(0);
     }
 }
-.buttonn{
-     margin-left: 80px;
-     margin-top: -90px;
-     background-color: black;
-     color: white;
-     font-weight: 800;
-     padding: 10px;
-     border-radius: 20px;
-     cursor: pointer;
+
+.buttonn {
+    margin-left: 80px;
+    margin-top: -90px;
+    background-color: black;
+    color: white;
+    font-weight: 800;
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;
 }
-.buttonn:hover{
+
+.buttonn:hover {
     background-color: aliceblue;
     color: black;
 
 }
-.heading{
+
+.heading {
     text-align: center;
-    margin-top:140px;
-}
-.margin{
-    margin-top: -120px; 
+    margin-top: 140px;
 }
 
-.img1{
+.margin {
+    margin-top: -120px;
+}
+
+.img1 {
     margin: 40px;
-    width: 300px; 
+    width: 300px;
     height: 330px;
     border: 2px solid black;
     border-radius: 20px;
     margin-left: -1px;
     margin-top: 140px;
 }
-.p1{
+
+.p1 {
     color: purple;
     font-size: 20px;
     font-weight: 900;
     margin-left: 19px;
     margin-top: -78px;
+
+}
+
+.p1:hover {
+    color: black;
+}
+
+
+.btn1 {
+    margin-left: 80px;
+    margin-top: 5px;
+    background-color: aliceblue;
+    color: black;
+    font-weight: 800;
+    padding: 10px;
+    border-radius: 20px;
     cursor: pointer;
 }
-.p1:hover{
-    color: black; 
-}
 
-
-.btn1{
-    margin-left: 80px;
-     margin-top: 5px;
-     background-color: aliceblue;
-     color: black;
-     font-weight: 800;
-     padding: 10px;
-     border-radius: 20px;
-     cursor: pointer;
-}
-.btn1:hover{
+.btn1:hover {
     color: white;
     background-color: black;
 }
 
-.p2{
+.p2 {
     color: purple;
     font-size: 20px;
     font-weight: 900;
@@ -414,41 +426,44 @@ body.dark .search-field i {
     margin-top: -38px;
     cursor: pointer;
 }
-.p2:hover{
-    color: black; 
+
+.p2:hover {
+    color: black;
 }
 
-.btn2{
+.btn2 {
     margin-left: 430px;
-     margin-top: 6px;
-     background-color: aliceblue;
-     color: black;
-     font-weight: 800;
-     padding: 10px;
-     border-radius: 20px;
-     cursor: pointer;
+    margin-top: 6px;
+    background-color: aliceblue;
+    color: black;
+    font-weight: 800;
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;
 
 }
-.btn2:hover{
+
+.btn2:hover {
     background-color: black;
     color: white;
 }
 
 
-.imgg2{
+.imgg2 {
     margin-top: -65px;
     margin-left: -4px;
 }
 
-.img2{
-    width: 300px; 
+.img2 {
+    width: 300px;
     height: 330px;
     border: 2px solid black;
     border-radius: 20px;
     margin-left: 330px;
     margin-top: -690px;
 }
-.p3{
+
+.p3 {
     color: white;
     font-size: 20px;
     font-weight: 900;
@@ -456,33 +471,83 @@ body.dark .search-field i {
     margin-top: -34px;
     cursor: pointer;
 }
-.p3:hover{
+
+.p3:hover {
     color: black;
 }
-.btn3{
+
+.btn3 {
     margin-left: 90px;
     margin-top: 3px;
     background-color: aliceblue;
-     color: black;
-     font-weight: 800;
-     padding: 10px;
-     border-radius: 20px;
-     cursor: pointer;
+    color: black;
+    font-weight: 800;
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;
 }
-.btn3:hover{
+
+.btn3:hover {
     background-color: black;
     color: white;
 }
 
- .imgg3{
+.imgg3 {
     margin-top: -177px;
     margin-left: 655px;
-} 
-.img3{
-    width: 300px; 
+}
+
+.img3 {
+    width: 300px;
     height: 330px;
     border: 2px solid black;
     border-radius: 20px;
     margin-left: -00px;
     margin-top: -200px;
+}
+
+.image {
+    margin: 28px;
+    width: 900px;
+    height: 380px;
+    border-radius: 30px;
+    /* opacity: 0.5; */
+
+}
+
+.head {
+    color: black;
+    font-weight: 900;
+    text-align: center;
+    margin-top: -299px ;
+    opacity: 1;
+}
+.head2{
+    color: black;
+    font-weight: 900;
+    text-align: center;
+    margin-top: -250px ;
+    opacity: 1;
+
+}
+.email{
+    margin-left: 390px;
+    margin-top: 200px;
+    background-color: aliceblue;
+    color: black;
+    font-weight: 800;
+    padding: 10px;
+    cursor: pointer;
+   
+}
+.btn4{
+    margin-left: 450px;
+    margin-top: 10px;
+    background-color: aliceblue;
+    color: black;
+    font-weight: 800;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 20px;
+   
 }
