--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -31,7 +31,8 @@ nav {
     /* margin-left: 30px; */
     /* margin-top: 20px; */
     opacity: 0.6;
-    background-color: wheat;
+    /* border-radius: 20px; */
+    background-color: lightblue;
     z-index: 100;
 }
 
@@ -150,7 +151,7 @@ nav .nav-bar .nav-links li {
     height: 400vh;
     margin-top: -0px;
     padding: 15px;
-    /* border-radius: 20px;  */
+    border-radius: 20px; 
     background-color: palevioletred;
 }
 
@@ -350,6 +351,7 @@ nav .nav-bar .nav-links li {
     margin: 28px;
     width: 900px;
     height: 380px;
+    margin-left: 50px;
     border-radius: 30px;
     /* opacity: 0.5; */
 
