--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -30,9 +30,9 @@ nav {
     width: 100%;
     /* margin-left: 30px; */
     /* margin-top: 20px; */
-    opacity: 0.6;
+    /* opacity: 0.6; */
     /* border-radius: 20px; */
-    background-color: lightblue;
+    background-color: yellowgreen;
     z-index: 100;
 }
 
@@ -48,11 +48,11 @@ nav .nav-bar {
 }
 
 nav .nav-bar .sidebarOpen {
-    color: black;
+    color: blue;
     font-size: 25px;
     padding: 5px;
     cursor: pointer;
-    display: none; /* Hidden by default */
+    display: none; 
 }
 
 nav .nav-bar .logo a {
