--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -87,10 +87,14 @@ nav .nav-bar .nav-links li {
 }
 
 .nav-links li a:hover {
-    background-color: black;
     font-weight: 800;
     border-radius: 20px;
     color: white;
+}
+.search input{
+    height: 50px;
+    width: 170px;
+    border-radius: 20px; 
 }
 
 /* Media Queries */
@@ -387,3 +391,82 @@ nav .nav-bar .nav-links li {
     border-radius: 20px;
    
 }
+.container {
+    position: relative;
+    width: 50%;
+}
+.image1 {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+} 
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+.container:hover .image1 {
+    opacity: 0.3;
+}
+.container:hover .middle {
+    opacity: 1;
+}
+  
+.text1{
+    color: black;
+    font-weight: 700;
+    font-size: 26px;
+    padding: 16px 32px;
+    margin-right: 80px;
+    
+  }
+  .container2 {
+    position: relative;
+    width: 50%;
+  }
+  
+  .image2 {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: white;
+    opacity: 0.8;
+    overflow: hidden;
+    width: 350px;
+    height:0;
+    transition: .5s ease;
+  }
+  
+  .container2:hover .overlay {
+    bottom: 0;
+    height: 100%;
+  }
+  
+  .text2 {
+    color: black;
+    font-size: 20px;
+    font-weight: 700;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
