--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -47,8 +47,91 @@ body {
     font-weight: 800; 
 }
 
+
+.flip-box {
+    background-color: transparent;
+    width: 230px;
+    height: 240px;
+    border: 2px solid black;
+    margin-top: 30px;
+    perspective: 1000px;
+  }
+  
+  .flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-box-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-box-back {
+    background-color: #555;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+  .flip-box2 {
+    background-color: transparent;
+    width: 230px;
+    height: 240px;
+    border: 2px solid black;
+    margin-top: 30px;
+    perspective: 1000px;
+  }
+  
+  .flip-box-inner2 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-box2:hover .flip-box-inner2 {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box-front2, .flip-box-back2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-box-front2 {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-box-back2 {
+    background-color: #555;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
 .divv {
-    background-color: white;
+    /* background-color: white; */
     margin-top: 30px;
     width: 950px;
     height: auto;
