--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -26,6 +26,7 @@ body {
   list-style: none;
   margin-top: -10px;
   height: 80px;
+  background-color: plum;
 }
 
 .nav-links li a {
@@ -35,6 +36,7 @@ body {
   color: white;
   text-decoration: none;
   padding: 20px;
+  
 }
 
 .nav-links li a:hover {
