--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -37,7 +37,7 @@ body {
   list-style: none;
   margin-top: -10px;
   height: 80px;
-  background-color: grey;
+  background-color: rgb(66, 86, 86);
  
 }
 
